fix; for this site md spacing is different then it in library

--- a/src/components/Layout/layout.module.css
+++ b/src/components/Layout/layout.module.css
@@ -38,6 +38,9 @@ body {
 
 .narrow {
     max-width: 720px;
+
+    margin-top: var(--ktf-fuild-spacing-xl);
+    margin-bottom: var(--ktf-fuild-spacing-xl);
 }
 
 @media (max-width: 767px) {
